// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keepAlive settings should throw if < -1 keepAliveInterval connectionString 1`] = `"ParseError"`;

exports[`keepAlive settings should throw if < -1 keepAliveTimeout connectionString 1`] = `"ParseError"`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 1`] = `
[
  [
    "The 'esdb' protocol is deprecated. Please use 'kurrentdb', 'kdb' or 'kurrent' instead.",
  ],
  [
    "Specified KeepAliveInterval of 0 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 2`] = `
[
  [
    "The 'esdb' protocol is deprecated. Please use 'kurrentdb', 'kdb' or 'kurrent' instead.",
  ],
  [
    "Specified KeepAliveInterval of 1 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 3`] = `
[
  [
    "The 'esdb' protocol is deprecated. Please use 'kurrentdb', 'kdb' or 'kurrent' instead.",
  ],
  [
    "Specified KeepAliveInterval of 10 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 4`] = `
[
  [
    "The 'esdb' protocol is deprecated. Please use 'kurrentdb', 'kdb' or 'kurrent' instead.",
  ],
  [
    "Specified KeepAliveInterval of 1000 is less than recommended 10_000 ms.",
  ],
]
`;

exports[`keepAlive settings should warn if keepAliveInterval is less than 10_000ms (but more than -1) connectionString 5`] = `
[
  [
    "The 'esdb' protocol is deprecated. Please use 'kurrentdb', 'kdb' or 'kurrent' instead.",
  ],
  [
    "Specified KeepAliveInterval of 9999 is less than recommended 10_000 ms.",
  ],
]
`;
